# thepeoplesAi

./: .gitignore  README.md  VISION.md  config.json  install.bat  install.ps1  install.sh  launch.sh  main.py  pyproject.toml  requirements.txt
assets/: i18n.py  themes.py
core/: __init__.py  agent_switcher.py  config.py  crash_reporter.py  downloader.py  encryption.py  hardware.py  logger.py  metadata_stamp.py  model_manager.py  network_monitor.py  plugin_loader.py  privacy.py  system_tools.py  trainer.py  tts.py  updater.py
crash_reports/: crash_cfe01eeec30f.json  crash_f0360d41c05e.json
modules/: __init__.py  agent.py  comfy_client.py  tools.py  video.py  voice_tts.py
modules/modules/: dynamic_arbitrator.py  voice_listener.py
plugins/: calculator.py  files.py  joke.py  time_plugin.py
scripts/: doctor.sh
tests/: conftest.py  test_agent.py  test_chat.py  test_config.py  test_crash_reporter.py  test_encryption.py  test_hardware.py  test_i18n.py  test_logger.py  test_metadata_stamp.py  test_network_monitor.py  test_paths.py  test_plugin_loader.py  test_plugins.py  test_themes.py
training/: trainer.py
training/adapters/: test-model.training.json
ui/: about.py  app.py  chat.py  models_tab.py  privacy_tab.py  settings.py  splash.py  system_tab.py  terms_tab.py  top_bar.py  training_tab.py  update_dialog.py  video_tab.py  wizard.py
ui/components/: __init__.py  message_bubble.py  sidebar.py  toolbar.py
utils/: __init__.py  paths.py  scroll_fix.py
