[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "freedomforgeai"
version = "0.1.0a0"
description = "FreedomForge AI — Local AI assistant. No cloud, no account, no subscription."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Ryan Dennison" }
]
keywords = ["ai", "llm", "local", "llama", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "setuptools>=68.0.0",
    "customtkinter>=5.2.0",
    "llama-cpp-python>=0.2.0",
    "psutil>=5.9.0",
    "gputil>=1.4.0",
    "requests>=2.28.0",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.13",
    "cryptography>=41.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
freedomforgeai = "main:main"

[project.urls]
Homepage = "https://github.com/freeechoaiwhisperer-hash/stupid-simpleAI"
Repository = "https://github.com/freeechoaiwhisperer-hash/stupid-simpleAI"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*", "modules*", "assets*", "utils*"]

[tool.setuptools.package-data]
"assets" = ["themes/*.json", "i18n/*.json", "icons/*"]
